fix: fix svg icons not showing in bottombar

--- a/frontend/src/styles/Header.module.scss
+++ b/frontend/src/styles/Header.module.scss
@@ -59,10 +59,20 @@
     gap: 10px;
     font-weight: 300;
     color: white;
+    padding: 13px;
+    cursor: pointer;
+
+    svg {
+      width: 18px;
+    }
+
+    &:hover {
+      background-color: var(--color-light-blue);
+      border-radius: 20px;
+    }
 
     &_active {
       border: 1px solid white;
-      padding: 10px;
       border-radius: 20px;
       background-color: var(--color-light-blue);
     }
